# Narrate-AI

./: .env.example  .gitignore  AGENTS.md  CODE_GUIDE.md  README.md  app.py  futureprompt.txt  main.py  pipeline.py  prompt.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
agents/: __init__.py  image_segmentation.py  narrative_architect.py  query_generator.py  script_writer.py  visual_intelligence.py
core/: cache.py  config.py  llm.py  models.py  pipeline.py  text_utils.py
docs/plans/: 2026-02-13-documentary-design.md
moviepy_starter/: README.md  main.py  pyproject.toml
narrate_ai/: __init__.py  config.py  llm.py  models.py  pipeline.py  rag.py  text_utils.py  video.py
narrate_ai/agents/: __init__.py  image_placement.py  image_ranking.py  image_retrieval.py  narration.py  narrative_architect.py  query_generator.py  research.py  script_writer.py  visual_intelligence.py
narrate_ai/core/: cache.py
narrate_ai/tools/: image_placement.py  image_ranking.py  image_retrieval.py  narration.py  research.py  video.py
narrate_ai/tts/: __init__.py  base.py  edge_tts_client.py  elevenlabs.py  factory.py
runs/20260213-141740-history-of-roman-empire/: manifest.json  narrative_plan.json  notes.json  script.txt  sources.json  timeline.json
runs/20260213-151923-cold-war/: manifest.json  narrative_plan.json  notes.json  script.txt  timeline.json
runs/20260213-154429-cold-war/: manifest.json  narrative_plan.json  notes.json  (+3 more)
services/: __init__.py  audio_generator.py  image_placement.py  image_ranking.py  image_retrieval.py  research_crawler.py  video_assembly.py
tools/: __init__.py  image_placement.py  image_ranking.py  image_retrieval.py  narration.py  research.py
(+24 files in other folders)
