[project]
name = "narrate-ai"
version = "0.1.0"
description = "Automated multi-agent documentary video generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "cerebras-cloud-sdk>=1.67.0",
    "ddgs>=9.10.0",
    "edge-tts>=6.1.9",
    "google-genai>=1.63.0",
    "groq>=0.20.0",
    "moviepy>=2.2.1",
    "pillow>=11.3.0",
    "pinecone>=8.0.1",
    "pydantic>=2.10.0",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
]

[project.optional-dependencies]
clip = [
    "open-clip-torch>=2.30.0",
    "torch>=2.8.0",
]
crewai = [
    "crewai>=0.186.1",
]
crawl = [
    "crawl4ai>=0.7.4",
]
rag = [
    "pinecone>=6.0.0",
    "google-generativeai>=0.8.0",
]
