[tool.poetry]
name = "moviepy-starter"
version = "0.1.0"
description = "MoviePy starter code for timeline synchronization"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
moviepy = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"